--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,8 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #228896 !default;
+$brand-primary: 
+	!default;
 
 
 
